Overflow issues fixed/ .

--- a/src/css/React/CanvasContainer.css
+++ b/src/css/React/CanvasContainer.css
@@ -2,4 +2,6 @@
     padding: 15px;
     position: absolute;
     top: 150px;
+    height: 700px;
+    overflow: scroll;
 }
